# 26a-emb-aps-2-aps2-fogao

./: README.md
.github/workflows/: cppcheck.yml  embedded-check.yml
ei-model/model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
ei-model/tflite-model/: tflite_learn_1024993_3_compiled.cpp  tflite_learn_1024993_3_compiled.h
main/: CMakeLists.txt  gesture.cpp  integration.h  main.c  pause.h  power_up.h
pc/: controller.py  requirements.txt
src/: main.cpp
